--- a/Statment_processing.ipynb
+++ b/Statment_processing.ipynb
@@ -21,6 +21,12 @@
       "Счёт 510-5 - добавлено документов: 0\n",
       "Счёт 761-0 - добавлено документов: 0\n",
       "Счёт 760-53 - добавлено документов: 0\n",
+      "Добавлено операций купли-продажи ценных бумаг: 0\n",
+      "Счёт 761-3 - добавлено документов: 0\n",
+      "Счёт 760-53 - добавлено документов: 0\n",
+      "Добавлено операций купли-продажи ценных бумаг: 0\n",
+      "Счёт 761-4 - добавлено документов: 0\n",
+      "Счёт 760-53 - добавлено документов: 0\n",
       "Добавлено операций купли-продажи ценных бумаг: 0\n"
      ]
     }
@@ -241,11 +247,11 @@
     "    file = max(files, key=os.path.getctime)\n",
     "\n",
     "    # Считываем данные из файлов\n",
-    "    tree = ET.parse(os.path.join(directory, path, file))\n",
+    "    tree = ET.parse(file)\n",
     "    root = tree.getroot()\n",
     "    json = xmljson.gdata.data(root[17][0])\n",
     "    json = json['{report577p_v1}Подробности9_Collection']['{report577p_v1}Подробности9']\n",
-    "        security_deals = pd.DataFrame(json)\n",
+    "    security_deals = pd.DataFrame(json)\n",
     "\n",
     "\n",
     "    # Обработка данных\n",
@@ -315,21 +321,21 @@
     "        if row['syn_acc'] == 582:\n",
     "            k += 1\n",
     "            cur.execute('INSERT INTO 004_Проводки VALUES(?, ?, ?, ?, ?, ?)',\n",
-    "                        post_id, k, row['syn_acc'], row['anal_acc'],\n",
-    "                        row['accumulated_coupon'], 0)\n",
+    "                        post_id, k, row['syn_acc'], row['anal_acc']+1,\n",
+    "                        row['accumulated_coupon'], None)\n",
     "        k += 1\n",
     "        cur.execute('INSERT INTO 004_Проводки VALUES(?, ?, ?, ?, ?, ?)',\n",
-    "                    post_id, k, 760, 53, -row['amount'], 0)\n",
+    "                    post_id, k, 760, 53, -row['amount'], None)\n",
     "        k += 1\n",
     "        cur.execute('INSERT INTO 004_Проводки VALUES(?, ?, ?, ?, ?, ?)',\n",
-    "                    post_id, k, 760, 57, -row['сommission'], 0)\n",
+    "                    post_id, k, 760, 57, -row['сommission'], None)\n",
     "        if row['syn_acc'] == 581:\n",
     "            k += 1\n",
     "            cur.execute('INSERT INTO 004_Проводки VALUES(?, ?, ?, ?, ?, ?)',\n",
-    "                        post_id, k, 792, 19, -row['amount']-row['сommission'], 0)\n",
+    "                        post_id, k, 792, 19, -row['amount']-row['сommission'], None)\n",
     "            k += 1\n",
     "            cur.execute('INSERT INTO 004_Проводки VALUES(?, ?, ?, ?, ?, ?)',\n",
-    "                        post_id, k, 792, 20, row['amount']+row['сommission'], 0)\n",
+    "                        post_id, k, 792, 20, row['amount']+row['сommission'], None)\n",
     "    conn.commit()\n",
     "    conn.close()\n",
     "    print('Добавлено операций купли-продажи ценных бумаг: {}'.format(len(security_deals)))\n",
@@ -382,7 +388,7 @@
     "upload_data(510, 5, transactions)\n",
     "\n",
     "# Загрузка операций по брокерскому счёту Егора\n",
-    "path = r'Георгий/Брокерские отчёты XML'\n",
+    "path = r'Георгий/Брокерские отчёты XML/Основной'\n",
     "transactions = read_vtb_broker_reports(path)\n",
     "data = transactions[transactions.description !=\n",
     "                     'Вознаграждение Брокера; Разница между суммами по специальным сделкам РЕПО ¹'].copy()\n",
@@ -390,9 +396,30 @@
     "data = transactions[transactions.description ==\n",
     "                     'Вознаграждение Брокера; Разница между суммами по специальным сделкам РЕПО ¹'].copy()\n",
     "upload_data(760, 53, data, beg='2020-01-01')\n",
+    "security_deals = vtb_broker_security_deals(path)\n",
+    "security_deals_upload_to_base(security_deals)\n",
     "\n",
-    "# Загрузка операций по основному брокерскому счёту\n",
-    "path = r'Георгий/Брокерские отчёты XML'\n",
+    "# Загрузка операций по ИИС Егора\n",
+    "path = r'Георгий/Брокерские отчёты XML/ИИС'\n",
+    "transactions = read_vtb_broker_reports(path)\n",
+    "data = transactions[transactions.description !=\n",
+    "                     'Вознаграждение Брокера; Разница между суммами по специальным сделкам РЕПО ¹'].copy()\n",
+    "upload_data(761, 3, data, beg='2020-01-01')\n",
+    "data = transactions[transactions.description ==\n",
+    "                     'Вознаграждение Брокера; Разница между суммами по специальным сделкам РЕПО ¹'].copy()\n",
+    "upload_data(760, 53, data, beg='2020-01-01')\n",
+    "security_deals = vtb_broker_security_deals(path)\n",
+    "security_deals_upload_to_base(security_deals)\n",
+    "\n",
+    "# Загрузка операций по ИИС Алены\n",
+    "path = r'Алена/Брокерские отчёты XML'\n",
+    "transactions = read_vtb_broker_reports(path)\n",
+    "data = transactions[transactions.description !=\n",
+    "                     'Вознаграждение Брокера; Разница между суммами по специальным сделкам РЕПО ¹'].copy()\n",
+    "upload_data(761, 4, data, beg='2020-01-01')\n",
+    "data = transactions[transactions.description ==\n",
+    "                     'Вознаграждение Брокера; Разница между суммами по специальным сделкам РЕПО ¹'].copy()\n",
+    "upload_data(760, 53, data, beg='2020-01-01')\n",
     "security_deals = vtb_broker_security_deals(path)\n",
     "security_deals_upload_to_base(security_deals)"
    ]
@@ -564,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,14 +608,14 @@
     "\n",
     "# Подготовка датафрейма для загрузки\n",
     "data = {\n",
-    "    'name': 'Корректировка',\n",
-    "    'date': '31.03.2030',\n",
-    "    'amount': 538474.82,\n",
-    "    'ds': 761,\n",
-    "    'da': 0,\n",
+    "    'name': 'Результат спекулятинвых операций',\n",
+    "    'date': '26.05.2020',\n",
+    "    'amount': 299422.06,\n",
+    "    'ds': 662,\n",
+    "    'da': 28,\n",
     "    'dq': 'Null',\n",
-    "    'cs': 760,\n",
-    "    'ca': 54,\n",
+    "    'cs': 926,\n",
+    "    'ca': 1,\n",
     "    'cq': 'Null'\n",
     "}\n",
     "\n",
@@ -607,9 +634,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "DatabaseError",
+     "evalue": "Execution failed on sql ' SELECT [003_Факты].Дата, [003_Факты].СобНаим, [004_Проводки].ФактНом, [002_АналСчета].СинтСчётНом, [002_АналСчета].АналСчётНом, [002_АналСчета].АналСчётНаим, [004_Проводки].Оборот, [004_Проводки].Кол         FROM 003_Факты INNER JOIN (002_АналСчета INNER JOIN 004_Проводки ON ([002_АналСчета].АналСчётНом = [004_Проводки].АналСчётНом) AND ([002_АналСчета].СинтСчётНом = [004_Проводки].СинтСчётНом)) ON [003_Факты].ФактНом = [004_Проводки].ФактНом         WHERE ((([003_Факты].СобНаим)=\"Купля-продажа ЦБ\") AND (([002_АналСчета].СинтСчётНом)=581)) ': ('07002', '[07002] [Microsoft][ODBC Microsoft Access Driver] Too few parameters. Expected 1. (-3010) (SQLExecDirectW)')",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mError\u001b[0m                                     Traceback (most recent call last)",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\io\\sql.py\u001b[0m in \u001b[0;36mexecute\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m   1594\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1595\u001b[1;33m                 \u001b[0mcur\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1596\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mcur\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mError\u001b[0m: ('07002', '[07002] [Microsoft][ODBC Microsoft Access Driver] Too few parameters. Expected 1. (-3010) (SQLExecDirectW)')",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[1;31mDatabaseError\u001b[0m                             Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-10-e19cf9e4bcda>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      8\u001b[0m         \u001b[0mFROM\u001b[0m \u001b[1;36m00\u001b[0m\u001b[1;36m3\u001b[0m\u001b[0m_Факты\u001b[0m \u001b[0mINNER\u001b[0m \u001b[0mJOIN\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;36m00\u001b[0m\u001b[1;36m2\u001b[0m\u001b[0m_АналСчета\u001b[0m \u001b[0mINNER\u001b[0m \u001b[0mJOIN\u001b[0m \u001b[1;36m00\u001b[0m\u001b[1;36m4\u001b[0m\u001b[0m_Проводки\u001b[0m \u001b[0mON\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m00\u001b[0m\u001b[1;36m2\u001b[0m\u001b[0m_АналСчета\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mАналСчётНом\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m00\u001b[0m\u001b[1;36m4\u001b[0m\u001b[0m_Проводки\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mАналСчётНом\u001b[0m\u001b[1;33m)\u001b[0m \u001b[0mAND\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m00\u001b[0m\u001b[1;36m2\u001b[0m\u001b[0m_АналСчета\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mСинтСчётНом\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m00\u001b[0m\u001b[1;36m4\u001b[0m\u001b[0m_Проводки\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mСинтСчётНом\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[0mON\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m00\u001b[0m\u001b[1;36m3\u001b[0m\u001b[0m_Факты\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mФактНом\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m00\u001b[0m\u001b[1;36m4\u001b[0m\u001b[0m_Проводки\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mФактНом\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m\\\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m         \u001b[0mWHERE\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m00\u001b[0m\u001b[1;36m3\u001b[0m\u001b[0m_Факты\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mСобНаим\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"Купля-продажа ЦБ\"\u001b[0m\u001b[1;33m)\u001b[0m \u001b[0mAND\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m00\u001b[0m\u001b[1;36m2\u001b[0m\u001b[0m_АналСчета\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mСинтСчётНом\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m581\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m \u001b[0mdf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_sql\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mSQL\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mconn\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m \u001b[0mconn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\io\\sql.py\u001b[0m in \u001b[0;36mread_sql\u001b[1;34m(sql, con, index_col, coerce_float, params, parse_dates, columns, chunksize)\u001b[0m\n\u001b[0;32m    408\u001b[0m             \u001b[0mcoerce_float\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcoerce_float\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    409\u001b[0m             \u001b[0mparse_dates\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mparse_dates\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 410\u001b[1;33m             \u001b[0mchunksize\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mchunksize\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    411\u001b[0m         )\n\u001b[0;32m    412\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\io\\sql.py\u001b[0m in \u001b[0;36mread_query\u001b[1;34m(self, sql, index_col, coerce_float, params, parse_dates, chunksize)\u001b[0m\n\u001b[0;32m   1643\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1644\u001b[0m         \u001b[0margs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_convert_params\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msql\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1645\u001b[1;33m         \u001b[0mcursor\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1646\u001b[0m         \u001b[0mcolumns\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mcol_desc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mcol_desc\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mcursor\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdescription\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1647\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\io\\sql.py\u001b[0m in \u001b[0;36mexecute\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m   1608\u001b[0m                 \u001b[1;34m\"Execution failed on sql '{sql}': {exc}\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msql\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mexc\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mexc\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1609\u001b[0m             )\n\u001b[1;32m-> 1610\u001b[1;33m             \u001b[0mraise_with_traceback\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mex\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1611\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1612\u001b[0m     \u001b[1;33m@\u001b[0m\u001b[0mstaticmethod\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\compat\\__init__.py\u001b[0m in \u001b[0;36mraise_with_traceback\u001b[1;34m(exc, traceback)\u001b[0m\n\u001b[0;32m     44\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mtraceback\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mEllipsis\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     45\u001b[0m         \u001b[0m_\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtraceback\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msys\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexc_info\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 46\u001b[1;33m     \u001b[1;32mraise\u001b[0m \u001b[0mexc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwith_traceback\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtraceback\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     47\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     48\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\io\\sql.py\u001b[0m in \u001b[0;36mexecute\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m   1593\u001b[0m                 \u001b[0mcur\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1594\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1595\u001b[1;33m                 \u001b[0mcur\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1596\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mcur\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1597\u001b[0m         \u001b[1;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mexc\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mDatabaseError\u001b[0m: Execution failed on sql ' SELECT [003_Факты].Дата, [003_Факты].СобНаим, [004_Проводки].ФактНом, [002_АналСчета].СинтСчётНом, [002_АналСчета].АналСчётНом, [002_АналСчета].АналСчётНаим, [004_Проводки].Оборот, [004_Проводки].Кол         FROM 003_Факты INNER JOIN (002_АналСчета INNER JOIN 004_Проводки ON ([002_АналСчета].АналСчётНом = [004_Проводки].АналСчётНом) AND ([002_АналСчета].СинтСчётНом = [004_Проводки].СинтСчётНом)) ON [003_Факты].ФактНом = [004_Проводки].ФактНом         WHERE ((([003_Факты].СобНаим)=\"Купля-продажа ЦБ\") AND (([002_АналСчета].СинтСчётНом)=581)) ': ('07002', '[07002] [Microsoft][ODBC Microsoft Access Driver] Too few parameters. Expected 1. (-3010) (SQLExecDirectW)')"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import xlrd\n",
@@ -617,13 +665,13 @@
     "import datetime\n",
     "\n",
     "conn = pyodbc.connect(conn_str)\n",
-    "SQL = ' SELECT [003_Факты].ФактНом, [003_Факты].Дата, [003_Факты].СобНаим, [004_Проводки].Оборот \\\n",
-    "        FROM 003_Факты INNER JOIN 004_Проводки ON [003_Факты].ФактНом = [004_Проводки].ФактНом \\\n",
-    "        WHERE ((([003_Факты].Дата)>=#1/1/2020#) AND (([004_Проводки].СинтСчётНом)=761) AND (([004_Проводки].АналСчётНом)=0)) \\\n",
-    "        ORDER BY [003_Факты].Дата '\n",
+    "SQL = ' SELECT [003_Факты].Дата, [003_Факты].СобНаим, [004_Проводки].ФактНом, [002_АналСчета].СинтСчётНом, [002_АналСчета].АналСчётНом, [002_АналСчета].АналСчётНаим, [004_Проводки].Оборот, [004_Проводки].Кол \\\n",
+    "        FROM 003_Факты INNER JOIN (002_АналСчета INNER JOIN 004_Проводки ON ([002_АналСчета].АналСчётНом = [004_Проводки].АналСчётНом) AND ([002_АналСчета].СинтСчётНом = [004_Проводки].СинтСчётНом)) ON [003_Факты].ФактНом = [004_Проводки].ФактНом \\\n",
+    "        WHERE ((([003_Факты].Дата)>=#1/1/2020#) AND (([003_Факты].СобНаим)=\"Купля-продажа ЦБ\") AND (([002_АналСчета].СинтСчётНом)=581)) \\\n",
+    "        ORDER BY [003_Факты].Дата'\n",
     "df = pd.read_sql(SQL, conn)\n",
-    "dft = df[df['Дата']<='2020-09-04'].groupby(['СобНаим']).sum().copy()\n",
-    "df = df[(df['Дата'].dt.month <= 9) & (df['Дата']<='2020-09-04')]"
+    "\n",
+    "df"
    ]
   },
   {
