--- a/VTB_broker_report.ipynb
+++ b/VTB_broker_report.ipynb
@@ -335,16 +335,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['C:/Users/gdoku/YandexDisk/Документы/Договоры/Банк ВТБ (ПАО)/Георгий/Брокерские отчёты XML\\\\72329080_20200101_20200917_381428.xml']"
+       "['C:/Users/gdoku/YandexDisk/Документы/Договоры/Банк ВТБ (ПАО)/Георгий/Брокерские отчёты XML\\\\72329080_20200101_20200917_381428.xml',\n",
+       " 'C:/Users/gdoku/YandexDisk/Документы/Договоры/Банк ВТБ (ПАО)/Георгий/Брокерские отчёты XML\\\\72329080_20200101_20200918_381590.xml']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,16 +360,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'C:/Users/gdoku/YandexDisk/Документы/Договоры/Банк ВТБ (ПАО)/Георгий/Брокерские отчёты XML\\\\72329080_20200101_20200917_381428.xml'"
+       "'C:/Users/gdoku/YandexDisk/Документы/Договоры/Банк ВТБ (ПАО)/Георгий/Брокерские отчёты XML\\\\72329080_20200101_20200918_381590.xml'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
