--- a/Statment_processing.ipynb
+++ b/Statment_processing.ipynb
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,14 +608,14 @@
     "\n",
     "# Подготовка датафрейма для загрузки\n",
     "data = {\n",
-    "    'name': 'Результат спекулятинвых операций',\n",
-    "    'date': '26.05.2020',\n",
-    "    'amount': 299422.06,\n",
-    "    'ds': 662,\n",
-    "    'da': 28,\n",
+    "    'name': 'Потребительские расходы',\n",
+    "    'date': '20.09.2020',\n",
+    "    'amount': 500,\n",
+    "    'ds': 430,\n",
+    "    'da': 5,\n",
     "    'dq': 'Null',\n",
-    "    'cs': 926,\n",
-    "    'ca': 1,\n",
+    "    'cs': 501,\n",
+    "    'ca': 2,\n",
     "    'cq': 'Null'\n",
     "}\n",
     "\n",
@@ -631,6 +631,72 @@
     "                                                                                -data['amount'], data['cq']))\n",
     "conn.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"Загрузка истории котировок\"\"\"\n",
+    "\n",
+    "import requests\n",
+    "import json\n",
+    "import pandas as pd\n",
+    "import pyodbc\n",
+    "\n",
+    "# Авторизация\n",
+    "user = 'gdokuchaev@yandex.ru'\n",
+    "password = 'jT3-rgT-dRw-Rtg'\n",
+    "auth_url = \"https://passport.moex.com/authenticate\"\n",
+    "payload = {'user': user, 'password': password}\n",
+    "requests.post(auth_url, data=payload)\n",
+    "\n",
+    "# Загрузка списка акций\n",
+    "conn_str = r\"Driver={Microsoft Access Driver (*.mdb, *.accdb)};\"r\"DBQ=C:\\Users\\gdoku\\YandexDisk\\Документы\\Семейные финансы\\FF.accdb;\"\n",
+    "conn = pyodbc.connect(conn_str)\n",
+    "shares = list(pd.read_sql('select * from 006_Акции', conn)['SECID'])\n",
+    "conn.close()\n",
+    "\n",
+    "#Запрос\n",
+    "date = '2020-09-18'\n",
+    "start = 0\n",
+    "req = {'history_secs':\n",
+    "       'http://iss.moex.com/iss/history/engines/%(engine)s/markets/%(market)s/boards/%(board)s/securities.json?date=%(date)s&start=%(start)s'}\n",
+    "while start % 100 == 0:\n",
+    "    url = req['history_secs'] % {'engine': 'stock',\n",
+    "                                 'market': 'shares',\n",
+    "                                 'board': 'tqbr',\n",
+    "                                 'date': date,\n",
+    "                                 'start': start}\n",
+    "    response = requests.get(url).json()\n",
+    "    temp = pd.DataFrame(response['history']['data'])\n",
+    "    if start == 0:\n",
+    "        df = temp\n",
+    "    else:\n",
+    "        df = df.append(temp)\n",
+    "    start += len(temp)\n",
+    "else:\n",
+    "    df.columns = list(response['history']['metadata'].keys())\n",
+    "    df = df[['TRADEDATE','SHORTNAME','SECID','CLOSE']][df['SECID'].isin(shares)]\n",
+    "    df['TRADEDATE'] = pd.to_datetime(df['TRADEDATE'])\n",
+    "    \n",
+    "# Загрузка данных в Access\n",
+    "conn = pyodbc.connect(conn_str)\n",
+    "with conn.cursor() as crsr:\n",
+    "    crsr.execute(\"DELETE * FROM 007_Котировки WHERE DATE = ?\", pd.to_datetime(date))\n",
+    "for index, row in df.iterrows():\n",
+    "    with conn.cursor() as crsr:\n",
+    "        crsr.execute(\"INSERT INTO 007_Котировки VALUES(?,?,?)\", row[\"SECID\"], row[\"TRADEDATE\"], row[\"CLOSE\"] )\n",
+    "conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
